# BandCAMP

./: .gitmodules  Dockerfile  README.md
src/: band_camp_scheme.F90  camp_photolysis.F90  scheme_BandCAMP.F90
test/: band_camp_host.F90  band_camp_suite.xml
test/camp_simple_mech/: CMakeLists.txt  README.md  band_camp_mod.F90  config.json  simple_mechanism.json
test/simple/: CMakeLists.txt  README.md  foobar.F90  simple_host.F90  simple_mod.F90  simple_scheme.F90  simple_suite.xml
